# SimpleDNS

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  sdns.c
